--- a/my app/app/src/main/res/drawable-v24/left_message.xml
+++ b/my app/app/src/main/res/drawable-v24/left_message.xml
@@ -7,6 +7,6 @@
         android:topRightRadius="8sp"
         android:bottomLeftRadius="8sp"/>
     <solid
-        android:color="@color/colorPrimaryDark"/>
+        android:color="#FF5B58"/>
 
 </shape>
