--- a/my app/app/src/main/res/drawable/stay.xml
+++ b/my app/app/src/main/res/drawable/stay.xml
@@ -5,7 +5,7 @@
     <corners
         android:radius="500dp"/>
     <solid
-        android:color="#009688"
+        android:color="@color/colorPrimary"
         />
 
 </shape>
