--- a/my app/app/src/main/res/layout/activity_packages.xml
+++ b/my app/app/src/main/res/layout/activity_packages.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+       >
 
         <ImageView
             android:id="@+id/imageView3"
@@ -38,7 +39,7 @@
             android:layout_alignParentLeft="true"
             android:text="Services Offered During Package:"
             android:layout_marginTop="0dp"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="18sp"
             android:textStyle="bold"
              />
@@ -54,7 +55,7 @@
             android:layout_marginEnd="25dp"
             android:layout_marginRight="25dp"
             android:text="Landour"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="16sp" />
 
         <TextView
@@ -72,7 +73,7 @@
             android:layout_marginEnd="272dp"
             android:layout_marginRight="272dp"
             android:text="VILLAGE :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <TextView
@@ -90,7 +91,7 @@
             android:layout_marginEnd="213dp"
             android:layout_marginRight="213dp"
             android:text="OUR RATE :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <TextView
@@ -104,7 +105,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:text="    5870"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="16sp" />
 
         <TextView
@@ -122,7 +123,7 @@
             android:layout_marginEnd="190dp"
             android:layout_marginRight="190dp"
             android:text="DURATION :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <TextView
@@ -136,7 +137,7 @@
             android:layout_toEndOf="@+id/textView6"
             android:layout_toRightOf="@+id/textView6"
             android:text="4 Nights and 5 Days"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="16sp" />
 
         <TextView
@@ -154,7 +155,7 @@
             android:layout_marginEnd="289dp"
             android:layout_marginRight="289dp"
             android:text="ITENARY :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <ScrollView
@@ -170,13 +171,14 @@
             android:layout_marginRight="0dp"
             android:layout_marginBottom="-7dp"
             android:scrollbars="vertical"
-            android:textColor="#fff"
+
             android:textSize="14sp">
 
             <TextView
                 android:id="@+id/It"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="#000"/>
         </ScrollView>
 
         <Button
