--- a/my app/app/src/main/res/layout/activity_packages_2.xml
+++ b/my app/app/src/main/res/layout/activity_packages_2.xml
@@ -40,7 +40,7 @@
             android:layout_alignParentLeft="true"
             android:text="Services Offered During Package:"
             android:layout_marginTop="0dp"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="18sp"
             android:textStyle="bold"
             />
@@ -56,7 +56,7 @@
             android:layout_marginEnd="25dp"
             android:layout_marginRight="25dp"
             android:text="Landour"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="16sp" />
 
         <TextView
@@ -74,7 +74,7 @@
             android:layout_marginEnd="272dp"
             android:layout_marginRight="272dp"
             android:text="VILLAGE :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <TextView
@@ -92,7 +92,7 @@
             android:layout_marginEnd="213dp"
             android:layout_marginRight="213dp"
             android:text="OUR RATE :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <TextView
@@ -106,7 +106,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:text="    5870"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="16sp" />
 
         <TextView
@@ -124,7 +124,7 @@
             android:layout_marginEnd="190dp"
             android:layout_marginRight="190dp"
             android:text="DURATION :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <TextView
@@ -138,7 +138,7 @@
             android:layout_toEndOf="@+id/textView6"
             android:layout_toRightOf="@+id/textView6"
             android:text="4 Nights and 5 Days"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="16sp" />
 
         <TextView
@@ -156,7 +156,7 @@
             android:layout_marginEnd="289dp"
             android:layout_marginRight="289dp"
             android:text="ITENARY :"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp" />
 
         <ScrollView
@@ -172,7 +172,7 @@
             android:layout_marginRight="0dp"
             android:layout_marginBottom="-7dp"
             android:scrollbars="vertical"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="14sp">
 
             <TextView
