--- a/my app/app/src/main/res/layout/stay.xml
+++ b/my app/app/src/main/res/layout/stay.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/colorPrimary">
 <android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:padding="8dp"
-    android:elevation="12dp"
-    android:paddingBottom="12dp"
-    android:paddingEnd="12dp"
-    android:paddingStart="12dp"
-    android:paddingTop="12dp"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <ImageView
+        android:id="@+id/StayImage"
+        android:layout_width="match_parent"
+        android:layout_height="150sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
-        android:background="@drawable/stay"
         android:id="@+id/Textst"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="jlfgdagjdl"
         android:textSize="20dp"
         android:textStyle="bold"
-android:gravity="center"        />
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/StayImage"
+        />
     </android.support.constraint.ConstraintLayout>
 
+</android.support.v7.widget.CardView>
