--- a/my app/app/src/main/res/layout/activity_admindash.xml
+++ b/my app/app/src/main/res/layout/activity_admindash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dark"
+    android:background="#444"
     tools:context=".admindash">
 
     <LinearLayout
