--- a/my app/app/src/main/res/layout/village_list_element.xml
+++ b/my app/app/src/main/res/layout/village_list_element.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="10sp"
+    >
 
     <LinearLayout
         android:id="@+id/touch"
@@ -11,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#80ffffff"
+        android:background="@drawable/custom_s_border"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
