--- a/my app/app/src/main/res/layout/activity_display_profile.xml
+++ b/my app/app/src/main/res/layout/activity_display_profile.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <EditText
+    <TextView
         android:id="@+id/Name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
         app:layout_constraintStart_toEndOf="@+id/photo"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/Email"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -59,7 +59,7 @@
         tools:textSize="18sp" />
 
 
-    <EditText
+    <TextView
         android:id="@+id/Gender"
         android:layout_width="75sp"
         android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Email" />
 
-    <EditText
+    <TextView
         android:id="@+id/Dob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,7 +111,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Dob"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
