--- a/my app/app/src/main/res/layout/activity_editprofile.xml
+++ b/my app/app/src/main/res/layout/activity_editprofile.xml
@@ -98,7 +98,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/Mob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
@@ -131,7 +131,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/Mob" />
 
 
 </android.support.constraint.ConstraintLayout>
