--- a/my app/app/src/main/res/layout/fragment_user_homefragment.xml
+++ b/my app/app/src/main/res/layout/fragment_user_homefragment.xml
@@ -10,16 +10,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#20000000"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="#20000000">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -42,6 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3sp"
                     android:text="TextView"
+                    android:textColor="#047"
                     android:textSize="17sp" />
 
                 <TextView
@@ -49,13 +62,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4sp"
-                    android:text="It's Time to Explore the World" />
+                    android:text="It's Time to Explore the World"
+                    android:textColor="#047" />
 
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="BE THERE, DO THAT!"
+                    android:textColor="#047"
                     android:textSize="15sp" />
             </LinearLayout>
 
@@ -65,16 +80,16 @@
             android:id="@+id/listPackages"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="6dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="6dp"
+            android:divider="@null"
+            android:dividerHeight="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-            android:divider="@null"
-            android:dividerHeight="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
