new travel guide register

--- a/my app/app/src/main/res/layout/activity_registertravelguide.xml
+++ b/my app/app/src/main/res/layout/activity_registertravelguide.xml
@@ -28,10 +28,15 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="password"
+                android:inputType="textPassword"
+                android:id="@+id/pass"/>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:id="@+id/email"/>
-
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
