--- a/my app/app/src/main/res/layout/activity_tgdata_for_admin.xml
+++ b/my app/app/src/main/res/layout/activity_tgdata_for_admin.xml
@@ -50,10 +50,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Name :" />
 
             <TextView
                 android:id="@+id/name"
+                android:textColor="@color/tg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -71,6 +73,7 @@
                 android:id="@+id/emailt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/tg"
                 android:layout_weight="1"
                 android:text="Email :" />
 
@@ -78,6 +81,7 @@
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/tg"
                 android:layout_weight="1"
                 android:text="TextView" />
         </LinearLayout>
@@ -95,6 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Phone number :" />
 
             <TextView
@@ -102,6 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -118,6 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Date of Birth :" />
 
             <TextView
@@ -125,6 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -141,6 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Gender" />
 
             <TextView
@@ -148,6 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -164,6 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Village" />
 
             <TextView
@@ -171,6 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -187,6 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Experience :" />
 
             <TextView
@@ -194,6 +207,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -210,6 +224,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="Address :" />
 
             <TextView
@@ -217,6 +232,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -233,6 +249,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="About :" />
 
             <TextView
@@ -240,6 +257,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/tg"
                 android:text="TextView" />
         </LinearLayout>
 
