--- a/my app/app/src/main/res/layout/activity_editprofile2.xml
+++ b/my app/app/src/main/res/layout/activity_editprofile2.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    tools:context=".EditProfile1"
-   >
+    tools:context=".editprofile2"
+    >
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/photo1"
@@ -276,4 +277,5 @@
         app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
 </android.support.constraint.ConstraintLayout>
